src-tauri/src/core/cli/tui/tests/snapshots/header_zero_cache_hit_ansi16.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback  cache 0%  ● [ready]                            |

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=Yellow
 0 53..61 fg=Red mod=BOLD
 0 63..72 fg=Green
