src-tauri/src/core/cli/tui/tests/snapshots/model_picker_w120_query.snap
---
source: src/core/cli/tui/tests/snapshot.rs
assertion_line: 163
expression: render_snapshot(buf)
---
|┌ Models ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐|
|│  All models               5│All available models                                                                     │|
|│  tokamak                  1│⌕ claude█                                                                                │|
|│  anthropic                2│  anthropic / claude-haiku-4-5                                                           │|
|│  openai                   2│▶ anthropic / claude-sonnet-4-5                                                          │|
|│                            │                                                                                         │|
|│                            │                                                                                         │|
|│                            │                                                                                         │|
|│                            │                                                                                         │|
|│                            │                                                                                         │|
|│                            │                                                                                         │|
|│                            │anthropic/claude-sonnet-4-5 · default                                                    │|
|│Enter choose · Left/Right panes · Up/Down move · type to search · Ctrl-R refresh · Esc close                          │|
|└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘|

 0 0..1 fg=Cyan
 0 1..9 fg=Black bg=Cyan mod=BOLD
 0 9..120 fg=Cyan
 1 0..1 fg=Cyan
 1 3..29 mod=REVERSED
 1 29..30 fg=DarkGray
 1 30..50 mod=BOLD
 1 119..120 fg=Cyan
 2 0..1 fg=Cyan
 2 29..39 fg=DarkGray
 2 119..120 fg=Cyan
 3 0..1 fg=Cyan
 3 29..30 fg=DarkGray
 3 119..120 fg=Cyan
 4 0..1 fg=Cyan
 4 29..30 fg=DarkGray
 4 30..119 mod=BOLD | REVERSED
 4 119..120 fg=Cyan
 5 0..1 fg=Cyan
 5 29..30 fg=DarkGray
 5 119..120 fg=Cyan
 6 0..1 fg=Cyan
 6 29..30 fg=DarkGray
 6 119..120 fg=Cyan
 7 0..1 fg=Cyan
 7 29..30 fg=DarkGray
 7 119..120 fg=Cyan
 8 0..1 fg=Cyan
 8 29..30 fg=DarkGray
 8 119..120 fg=Cyan
 9 0..1 fg=Cyan
 9 29..30 fg=DarkGray
 9 119..120 fg=Cyan
10 0..1 fg=Cyan
10 29..30 fg=DarkGray
10 119..120 fg=Cyan
11 0..1 fg=Cyan
11 29..67 fg=DarkGray
11 119..120 fg=Cyan
12 0..1 fg=Cyan
12 1..93 fg=DarkGray
12 119..120 fg=Cyan
13 0..120 fg=Cyan
