src-tauri/src/core/cli/tui/tests/snapshots/model_picker_w48.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
|╭ Models ──────────────────────────────────────╮|
|│   All models               5│All available … │|
|│   tokamak                  1│⌕ █             │|
|│   anthropic                2│  tokamak / to… │|
|│   openai                   2│  anthropic / … │|
|│                             │  anthropic / … │|
|│                             │▶ openai / gpt… │|
|│                             │  openai / gpt… │|
|│                             │                │|
|│                             │                │|
|│                             │                │|
|│                             │openai/gpt-5-m… │|
|│ Enter choose · Left/Right panes · Up/Down m… │|
|╰──────────────────────────────────────────────╯|

 0 0..1 fg=#56B6C2
 0 1..9 fg=Black bg=Cyan mod=BOLD
 0 9..48 fg=#56B6C2
 1 0..1 fg=#56B6C2
 1 4..30 mod=REVERSED
 1 30..31 fg=DarkGray
 1 31..46 mod=BOLD
 1 47..48 fg=#56B6C2
 2 0..1 fg=#56B6C2
 2 30..34 fg=DarkGray
 2 47..48 fg=#56B6C2
 3 0..1 fg=#56B6C2
 3 30..31 fg=DarkGray
 3 47..48 fg=#56B6C2
 4 0..1 fg=#56B6C2
 4 30..31 fg=DarkGray
 4 47..48 fg=#56B6C2
 5 0..1 fg=#56B6C2
 5 30..31 fg=DarkGray
 5 47..48 fg=#56B6C2
 6 0..1 fg=#56B6C2
 6 30..31 fg=DarkGray
 6 31..46 mod=BOLD | REVERSED
 6 47..48 fg=#56B6C2
 7 0..1 fg=#56B6C2
 7 30..31 fg=DarkGray
 7 47..48 fg=#56B6C2
 8 0..1 fg=#56B6C2
 8 30..31 fg=DarkGray
 8 47..48 fg=#56B6C2
 9 0..1 fg=#56B6C2
 9 30..31 fg=DarkGray
 9 47..48 fg=#56B6C2
10 0..1 fg=#56B6C2
10 30..31 fg=DarkGray
10 47..48 fg=#56B6C2
11 0..1 fg=#56B6C2
11 30..46 fg=DarkGray
11 47..48 fg=#56B6C2
12 0..1 fg=#56B6C2
12 2..46 fg=DarkGray
12 47..48 fg=#56B6C2
13 0..48 fg=#56B6C2
