src-tauri/src/core/cli/tui/tests/snapshots/monitors_inspector_empty.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    ● [re|
|╭ monitors ────────────────────────────────────────────────╮|
|│ ▶ no monitors running                                    │|
|╰──────────────────────────────────────────────────────────╯|
|                                                            |
|────────────────────────────────────────────────────────────|
|selecting…                                                  |
|                                                            |
|📂 /snapshot/repo            ↑/↓ select   x stop   Esc close|

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=#E5C07B
 0 55..60 fg=#98C379
 1 0..60 fg=#56B6C2
 2 0..1 fg=#56B6C2
 2 2..58 fg=Cyan mod=BOLD
 2 59..60 fg=#56B6C2
 3 0..60 fg=#56B6C2
 6 0..10 mod=DIM | ITALIC
 8 0..1 fg=#808080
 8 2..17 fg=#808080
 8 28..60 mod=DIM
