src-tauri/src/core/cli/tui/tests/snapshots/permission_prompt_diff_ansi16.snap
---
source: src/core/cli/tui/tests/snapshot.rs
assertion_line: 163
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    [working]      |
|──────────────────────────────────────────────────────────────────────|
|                                                                      |
|                                                                      |
|                                                                      |
|┌ permission required ───────────────────────────────────────────────┐|
|│edit wants write                                                    │|
|│on src/greet.rs                                                     │|
|│┌────────────────────────────────┐                                  │|
|││ @@ -1,3 +1,3 @@                │                                  │|
|││  fn greet() {                  │                                  │|
|││ -    println!("hi ansi16");    │                                  │|
|││ +    println!("hello ansi16"); │                                  │|
|││  }                             │                                  │|
|│└────────────────────────────────┘                                  │|
|│▶ Allow once                                                        │|
|│  Allow always (this thread)                                        │|
|│  Deny                                                              │|
|└────────────────────────────────────────────────────────────────────┘|
|• working… (Esc to cancel, type to steer the agent)                   |
|                                                                      |
| ↑/↓ select   Enter confirm   Esc deny   Ctrl-C cancel                |

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=Yellow
 0 55..64 fg=Cyan mod=BOLD
 5 0..1 fg=Yellow
 5 1..22 fg=Black bg=Yellow mod=BOLD
 5 22..70 fg=Yellow
 6 0..1 fg=Yellow
 6 1..5 fg=Cyan mod=BOLD
 6 5..12 fg=DarkGray
 6 12..17 fg=Yellow mod=BOLD
 6 69..70 fg=Yellow
 7 0..1 fg=Yellow
 7 1..4 fg=DarkGray
 7 69..70 fg=Yellow
 8 0..1 fg=Yellow
 8 1..35 fg=DarkGray
 8 69..70 fg=Yellow
 9 0..1 fg=Yellow
 9 1..3 fg=DarkGray
 9 3..18 fg=Cyan mod=DIM
 9 18..35 fg=DarkGray
 9 69..70 fg=Yellow
10 0..1 fg=Yellow
10 1..3 fg=DarkGray
10 3..4 mod=DIM
10 16..35 fg=DarkGray
10 69..70 fg=Yellow
11 0..1 fg=Yellow
11 1..3 fg=DarkGray
11 3..4 fg=Red mod=BOLD
11 4..30 fg=Red
11 30..35 fg=DarkGray
11 69..70 fg=Yellow
12 0..1 fg=Yellow
12 1..3 fg=DarkGray
12 3..4 fg=Green mod=BOLD
12 4..33 fg=Green
12 33..35 fg=DarkGray
12 69..70 fg=Yellow
13 0..1 fg=Yellow
13 1..3 fg=DarkGray
13 3..4 mod=DIM
13 5..35 fg=DarkGray
13 69..70 fg=Yellow
14 0..1 fg=Yellow
14 1..35 fg=DarkGray
14 69..70 fg=Yellow
15 0..1 fg=Yellow
15 1..69 fg=Cyan mod=BOLD
15 69..70 fg=Yellow
16 0..1 fg=Yellow
16 69..70 fg=Yellow
17 0..1 fg=Yellow
17 69..70 fg=Yellow
18 0..70 fg=Yellow
19 0..2 fg=Cyan
19 2..51 mod=DIM | ITALIC
21 1..4 fg=Yellow mod=BOLD
21 4..11 mod=DIM
21 14..19 fg=Yellow mod=BOLD
21 19..27 mod=DIM
21 30..33 fg=Yellow mod=BOLD
21 33..38 mod=DIM
21 41..47 fg=Yellow mod=BOLD
21 47..54 mod=DIM
