src-tauri/src/core/cli/tui/tests/snapshots/permission_prompt_exec.snap
---
source: src/core/cli/tui/tests/snapshot.rs
expression: render_snapshot(buf)
---
| 👋 gpt-5-mini  effort medium  ctx 0K/128K fallback    [working]                |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|╭ permission required ─────────────────────────────────────────────────────────╮|
|│ bash wants execute                                                           │|
|│ $ git status && cargo test --lib                                             │|
|│ ▶ Allow once                                                                 │|
|│   Allow all 'cargo', 'git' commands (this thread)                            │|
|│   Deny                                                                       │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|• working… (Esc to cancel, type to steer the agent)                             |
|                                                                                |
|📂 /snapshot/repo          ↑/↓ select   Enter confirm   Esc deny   Ctrl-C cancel|

 0 0..2 fg=Yellow
 0 3..14 mod=BOLD
 0 14..29 fg=#E5C07B
 0 55..64 fg=#56B6C2 mod=BOLD
10 0..1 fg=#E5C07B
10 1..22 fg=Black bg=#E5C07B mod=BOLD
10 22..80 fg=#E5C07B
11 0..1 fg=#E5C07B
11 2..6 fg=Cyan mod=BOLD
11 6..13 fg=DarkGray
11 13..20 fg=Yellow mod=BOLD
11 79..80 fg=#E5C07B
12 0..1 fg=#E5C07B
12 2..4 fg=DarkGray
12 79..80 fg=#E5C07B
13 0..1 fg=#E5C07B
13 2..78 fg=Cyan mod=BOLD
13 79..80 fg=#E5C07B
14 0..1 fg=#E5C07B
14 79..80 fg=#E5C07B
15 0..1 fg=#E5C07B
15 79..80 fg=#E5C07B
16 0..80 fg=#E5C07B
17 0..2 fg=#56B6C2
17 2..51 mod=DIM | ITALIC
19 0..1 fg=#808080
19 2..17 fg=#808080
19 27..30 fg=#E5C07B mod=BOLD
19 30..37 mod=DIM
19 40..45 fg=#E5C07B mod=BOLD
19 45..53 mod=DIM
19 56..59 fg=#E5C07B mod=BOLD
19 59..64 mod=DIM
19 67..73 fg=#E5C07B mod=BOLD
19 73..80 mod=DIM
